using System;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.InputSystem;

public class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string IsGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string IsOnWall = "isOnWall";
    internal static string IsOnCeiling = "isOnCeiling";
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string spellSlot1Trigger = "spellSlot1";
    internal static string shockwaveTrigger = "shockwave";
    internal static string isClimbing = "isClimbing";
}
